--- a/README
+++ b/README
@@ -2,4 +2,8 @@ jQuery Doom Tooltip
 
 Display tooltips and bubbles on your site.
 
+
+`$('[data-tooltip-text]').doomTooltip();`
+
+
 Sorry, documentation and demo will be added later.
