--- a/README
+++ b/README
@@ -3,7 +3,9 @@ jQuery Doom Tooltip
 Display tooltips and bubbles on your site.
 
 
-`$('[data-tooltip-text]').doomTooltip();`
+```
+$('[data-tooltip-text]').doomTooltip();
+```
 
 
 Sorry, documentation and demo will be added later.
